Revert "nav layout issues on smaller screens"
This reverts commit 799d7bcc396f9b5ff33828c6299267ace92e3364.

--- a/res/less/main.less
+++ b/res/less/main.less
@@ -140,14 +140,8 @@ header {
 }
 
 @media screen and (max-width: 640px) {
-    nav ul {
-        li {
-            display: block;
-
-            &:not(:first-child):before {
-                content: '';
-            }
-        }
+    html {
+        //font-size: 0.8em;
     }
 
     header > div > div {
